--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "bluebird": "^3.4.1",
     "body-parser": "^1.18.3",
-    "bootstrap": "4.2.1",
+    "bootstrap": ">=4.3.1",
     "bs58": "^3.1.0",
     "c3": "^0.4.11",
     "cookie": "^0.3.1",
